<resources>
    <string name="app_name">Aplicacion-4B-G7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Correo Electronico</string>
    <string name="password_hint">Contraseña</string>
    <string name="forgot_label">¿Olvidaste la contraseña?</string>
    <string name="button_login_label">Ingresar</string>
    <string name="login_label_1">No tengo cuenta</string>
    <string name="login_signup_label">¡Registrate Ahora!</string>
    <string name="email_error">Correo electronico no valido. Intente nuevamente</string>
    <string name="password_error">Contraseña incorrecta. Intente nuevamente</string>
    <string name="button_signup_label">Crear Cuenta</string>
    <string name="signup_label_1">Tengo cuenta</string>
    <string name="signup_label_2">¡Iniciar Sesion!</string>
    <string name="name_hint">Nombre</string>
    <string name="female_label">Femenino</string>
    <string name="male_label">Masculino</string>
    <string name="another_label">Otro</string>
    <string name="button_forgot_label">Cambiar contraseña</string>
    <string name="email_forgot_label">Ingrese su correo electronico</string>
    <string name="home_label">MYMEDIC</string>
    <string name="location_label">Localizaciones</string>
    <string name="specialist_label">Especialistas</string>
    <string name="profile_label">Mi perfil</string>
    <string name="home_fragment_label">Tu salud en nuestras manos</string>
    <string name="fragment_home_subtitle">Agenda tu cita para que nuestros especialistas puedan atenderte</string>
    <string name="fragment_home_services">Nuestros servicios</string>
    <string name="search_label">Buscar</string>
    <string name="specialist_fragment_title">Nuestros especialistas</string>
    <string name="specialist_fragment_subtitle">Agenda una cita con la especialidad de tu preferencia</string>
    <string name="login_error">Credenciales invalidas</string>
    <string name="details">Detalles del medico</string>
    <string name="about_us">Acerca de:</string>
    <string name="about_us_doctor">Excelente medico general graduado de la Universidad del Cauca, con 8 años de experiencia laboral. Actualmente especializandose en neurocirugia en la Universidad del Valle.</string>
    <string name="signup_error">Registro invalido</string>
</resources>