<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignUpFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_signup_card"
        app:layout_constraintVertical_chainStyle="spread"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/signup_email_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="@dimen/default_margin"
                android:hint="@string/password_hint"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/signup_password_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="@dimen/default_margin"
                android:hint="@string/name_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/signup_radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_name_layout"
                android:layout_marginVertical="@dimen/default_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/signup_male_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male_label"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/signup_female_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female_label"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/signup_another_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/another_label"/>

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_signup_card"
        app:layout_constraintBottom_toTopOf="@id/fragment_signup_label_1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button_signup_label"
        app:backgroundTint="@color/primaryLight"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_signup_label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_signup_label_2"
        android:layout_marginVertical="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/signup_label_1"
        android:textAppearance="@style/Text.Mintic"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginHorizontal="@dimen/default_margin"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_signup_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/fragment_signup_label_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_signup_label_1"
        app:layout_constraintBottom_toBottomOf="@id/fragment_signup_label_1"
        android:layout_marginVertical="@dimen/default_margin"
        android:text="@string/signup_label_2"
        android:textAppearance="@style/TextBlue.Mintic"
        />

</androidx.constraintlayout.widget.ConstraintLayout>